fixed wrong font data path

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -35,8 +35,8 @@
 }
 @font-face {
   font-family: 'Open Sans';
-  src: url('fonts/OpenSansWeb/OpenSansLight-Italic.eot');
-  src: url('fonts/OpenSansWeb/OpenSansLight-Italic.woff2') format('woff2'), url('fonts/OpenSansWeb/OpenSansLight-Italic.woff') format('woff'), url('fonts/OpenSansWeb/OpenSansLight-Italic.ttf') format('truetype'), url('fonts/OpenSansWeb/OpenSansLight-Italic.svg') format('svg');
+  src: url('fonts/OpenSansWeb/OpenSans-LightItalic.eot');
+  src: url('fonts/OpenSansWeb/OpenSans-LightItalic.woff2') format('woff2'), url('fonts/OpenSansWeb/OpenSans-LightItalic.woff') format('woff'), url('fonts/OpenSansWeb/OpenSans-LightItalic.ttf') format('truetype'), url('fonts/OpenSansWeb/OpenSans-LightItalic.svg') format('svg');
   font-weight: 300;
   font-style: italic;
 }
